@@ -46,7 +46,11 @@ public enum TitleTier {
   @Getter private final Long challengeCost;
   @Getter private final String description;
 
-  TitleTier(String titleName, Long requiredFans, Long challengeCost, String description) {
+  TitleTier(
+      final String titleName,
+      final Long requiredFans,
+      final Long challengeCost,
+      final String description) {
     this.titleName = titleName;
     this.requiredFans = requiredFans;
     this.challengeCost = challengeCost;
@@ -69,7 +73,7 @@ public enum TitleTier {
    * @param wrestlerFans The wrestler's current fan count
    * @return true if the wrestler can challenge for this title
    */
-  public boolean isEligible(Long wrestlerFans) {
+  public boolean isEligible(final Long wrestlerFans) {
     return wrestlerFans != null && wrestlerFans >= requiredFans;
   }
 
@@ -79,7 +83,7 @@ public enum TitleTier {
    * @param wrestlerFans The wrestler's current fan count
    * @return Array of eligible title tiers
    */
-  public static TitleTier[] getEligibleTitles(Long wrestlerFans) {
+  public static TitleTier[] getEligibleTitles(final Long wrestlerFans) {
     if (wrestlerFans == null || wrestlerFans < 0) {
       return new TitleTier[0];
     }
@@ -95,7 +99,7 @@ public enum TitleTier {
    * @param wrestlerFans The wrestler's current fan count
    * @return The highest eligible title tier, or null if none
    */
-  public static TitleTier getHighestEligibleTitle(Long wrestlerFans) {
+  public static TitleTier getHighestEligibleTitle(final Long wrestlerFans) {
     TitleTier[] eligible = getEligibleTitles(wrestlerFans);
     if (eligible.length == 0) {
       return null;
@@ -111,7 +115,7 @@ public enum TitleTier {
    * @return Formatted string like "World Title (100,000 fans required)"
    */
   public String getDisplayWithRequirement() {
-    return String.format("%s (%,d fans required)", titleName, requiredFans);
+    return "%s (%,d fans required)".formatted(titleName, requiredFans);
   }
 
   /**
