@@ -83,14 +83,14 @@ public class FeudParticipant extends AbstractEntity<Long> {
   // ==================== ATW RPG METHODS ====================
 
   /** Leave the feud with a reason. */
-  public void leaveFeud(String reason) {
+  public void leaveFeud(final String reason) {
     this.isActive = false;
     this.leftDate = Instant.now();
     this.leftReason = reason;
   }
 
   /** Change the participant's role in the feud. */
-  public void changeRole(FeudRole newRole, String reason) {
+  public void changeRole(final FeudRole newRole, final String reason) {
     this.role = newRole;
     // Could add a role change event here if needed
   }
@@ -109,23 +109,26 @@ public class FeudParticipant extends AbstractEntity<Long> {
   /** Get display string for this participation. */
   public String getDisplayString() {
     String status = isActive ? "Active" : "Left";
-    return String.format("%s (%s - %s)", wrestler.getName(), role.getDisplayName(), status);
+    return "%s (%s - %s)".formatted(wrestler.getName(), role.getDisplayName(), status);
   }
 
   /** Get participation summary. */
   public String getParticipationSummary() {
     if (isActive) {
-      return String.format(
-          "%s has been %s in %s for %d days",
-          wrestler.getName(), role.getDisplayName().toLowerCase(), feud.getName(), getDaysInFeud());
+      return "%s has been %s in %s for %d days"
+          .formatted(
+              wrestler.getName(),
+              role.getDisplayName().toLowerCase(),
+              feud.getName(),
+              getDaysInFeud());
     } else {
-      return String.format(
-          "%s was %s in %s for %d days (Left: %s)",
-          wrestler.getName(),
-          role.getDisplayName().toLowerCase(),
-          feud.getName(),
-          getDaysInFeud(),
-          leftReason != null ? leftReason : "Unknown reason");
+      return "%s was %s in %s for %d days (Left: %s)"
+          .formatted(
+              wrestler.getName(),
+              role.getDisplayName().toLowerCase(),
+              feud.getName(),
+              getDaysInFeud(),
+              leftReason != null ? leftReason : "Unknown reason");
     }
   }
 }
