@@ -88,7 +88,7 @@ public class HeatEvent extends AbstractEntity<Long> {
       changeStr = "±0";
     }
 
-    return String.format("%s (%s heat → %d total)", reason, changeStr, heatAfterEvent);
+    return "%s (%s heat → %d total)".formatted(reason, changeStr, heatAfterEvent);
   }
 
   /** Get the heat change with appropriate emoji. */
