@@ -47,16 +47,16 @@ public class FactionSyncService extends BaseSyncService {
   @Autowired @Lazy private FactionSyncService self;
 
   public FactionSyncService(
-      ObjectMapper objectMapper,
-      SyncServiceDependencies syncServiceDependencies,
-      FactionService factionService,
-      NotionApiExecutor notionApiExecutor) {
+      final ObjectMapper objectMapper,
+      final SyncServiceDependencies syncServiceDependencies,
+      final FactionService factionService,
+      final NotionApiExecutor notionApiExecutor) {
     super(objectMapper, syncServiceDependencies, notionApiExecutor);
     this.factionService = factionService;
     this.self = this;
   }
 
-  public SyncResult syncFactions(@NonNull String operationId) {
+  public SyncResult syncFactions(@NonNull final String operationId) {
     if (syncServiceDependencies
         .getSyncSessionManager()
         .isAlreadySyncedInSession(SyncEntityType.FACTIONS.getKey())) {
@@ -81,7 +81,7 @@ public class FactionSyncService extends BaseSyncService {
     }
   }
 
-  private SyncResult performFactionsSync(@NonNull String operationId, long startTime) {
+  private SyncResult performFactionsSync(@NonNull final String operationId, final long startTime) {
     try {
       if (!syncServiceDependencies
           .getNotionSyncProperties()
@@ -134,7 +134,7 @@ public class FactionSyncService extends BaseSyncService {
           .completeOperation(
               operationId,
               true,
-              String.format("Successfully synced %d factions", savedCount),
+              "Successfully synced %d factions".formatted(savedCount),
               savedCount);
 
       syncServiceDependencies
@@ -155,7 +155,7 @@ public class FactionSyncService extends BaseSyncService {
     }
   }
 
-  private FactionDTO convertFactionPageToDTO(@NonNull FactionPage factionPage) {
+  private FactionDTO convertFactionPageToDTO(@NonNull final FactionPage factionPage) {
     try {
       FactionDTO dto = new FactionDTO();
       Map<String, Object> rawProperties = factionPage.getRawProperties();
@@ -179,7 +179,7 @@ public class FactionSyncService extends BaseSyncService {
         if (isActiveObj instanceof Boolean) {
           dto.setIsActive((Boolean) isActiveObj);
         } else if (isActiveObj instanceof String str) {
-          dto.setIsActive(str.equalsIgnoreCase("true") || str.equalsIgnoreCase("active"));
+          dto.setIsActive("true".equalsIgnoreCase(str) || "active".equalsIgnoreCase(str));
         }
 
         dto.setLeaderExternalId(extractRelationId(rawProperties.get("Leader")));
@@ -215,12 +215,12 @@ public class FactionSyncService extends BaseSyncService {
     }
   }
 
-  private String extractRelationId(Object property) {
+  private String extractRelationId(final Object property) {
     List<String> ids = extractRelationIds(property);
     return ids.isEmpty() ? null : ids.get(0);
   }
 
-  private List<String> extractRelationIds(Object property) {
+  private List<String> extractRelationIds(final Object property) {
     List<String> ids = new ArrayList<>();
     if (property == null) {
       return ids;
@@ -252,7 +252,7 @@ public class FactionSyncService extends BaseSyncService {
   }
 
   @Transactional(propagation = Propagation.REQUIRES_NEW)
-  public Faction saveOrUpdateFaction(FactionDTO dto) {
+  public Faction saveOrUpdateFaction(final FactionDTO dto) {
     if (dto == null || dto.getName() == null) {
       return null;
     }
