@@ -94,20 +94,20 @@ public class NarrationDialog extends Dialog {
   private final Consumer<Segment> onSaveCallback;
 
   public NarrationDialog(
-      Segment segment,
-      NpcService npcService,
-      WrestlerService wrestlerService,
-      ShowService showService,
-      SegmentService segmentService,
-      Consumer<Segment> onSaveCallback,
-      RivalryService rivalryService,
-      SegmentNarrationController segmentNarrationController,
-      SegmentNarrationServiceFactory aiFactory,
-      RingsideActionService ringsideActionService,
-      com.github.javydreamercsw.management.service.relationship.WrestlerRelationshipService
+      final Segment segment,
+      final NpcService npcService,
+      final WrestlerService wrestlerService,
+      final ShowService showService,
+      final SegmentService segmentService,
+      final Consumer<Segment> onSaveCallback,
+      final RivalryService rivalryService,
+      final SegmentNarrationController segmentNarrationController,
+      final SegmentNarrationServiceFactory aiFactory,
+      final RingsideActionService ringsideActionService,
+      final com.github.javydreamercsw.management.service.relationship.WrestlerRelationshipService
           relationshipService,
-      UniverseContextService universeContextService,
-      com.github.javydreamercsw.base.ui.service.NotificationService notificationService) {
+      final UniverseContextService universeContextService,
+      final com.github.javydreamercsw.base.ui.service.NotificationService notificationService) {
     this.segmentService = segmentService;
     this.segment = segmentService.findByIdWithDetails(segment.getId()).orElse(segment);
     this.objectMapper = new ObjectMapper();
@@ -220,10 +220,10 @@ public class NarrationDialog extends Dialog {
         allNpcs.stream()
             .filter(
                 npc ->
-                    !npc.getNpcType().equals("Referee")
-                        && !npc.getNpcType().equals("Commissioner")
-                        && !npc.getNpcType().equals("Commentator")
-                        && !npc.getNpcType().equals("Announcer"))
+                    !"Referee".equals(npc.getNpcType())
+                        && !"Commissioner".equals(npc.getNpcType())
+                        && !"Commentator".equals(npc.getNpcType())
+                        && !"Announcer".equals(npc.getNpcType()))
             .sorted(Comparator.comparing(Npc::getName))
             .collect(Collectors.toList());
     otherNpcsField.setItems(otherNpcs);
@@ -279,11 +279,11 @@ public class NarrationDialog extends Dialog {
     getFooter().add(generateButton, saveButton, new Button("Close", e -> close()));
   }
 
-  private void addTeamSelector(@NonNull WrestlerDTO wrestler) {
+  private void addTeamSelector(@NonNull final WrestlerDTO wrestler) {
     addTeamSelector(List.of(wrestler));
   }
 
-  private void addTeamSelector(@NonNull List<WrestlerDTO> wrestlers) {
+  private void addTeamSelector(@NonNull final List<WrestlerDTO> wrestlers) {
     int teamNumber = teamsLayout.getComponentCount() + 1;
     MultiSelectComboBox<WrestlerDTO> wrestlersCombo =
         new MultiSelectComboBox<>("Team " + teamNumber);
@@ -406,29 +406,32 @@ public class NarrationDialog extends Dialog {
 
     context.setNpcs(buildNpcContexts());
     context.setInstructions(
-        "You will be provided with a context object in JSON format.\n"
-            + "The fields in this JSON object are described below.\n"
-            + "Please adhere to the following rules when generating the narration:\n\n"
-            + "1.  **Participants & Roles:** The characters physically present and acting in this"
-            + " segment are exclusively those in the 'wrestlers' and 'npcs' lists. Wrestlers from"
-            + " the 'fullRoster' who are not in the 'wrestlers' list are not present and cannot act"
-            + " or speak, but they can be mentioned or referenced (e.g., in an announcement for a"
-            + " future match).\n"
-            + "2.  **Data Integrity:** All characters, champions, and contenders mentioned in the"
-            + " narration MUST come from the 'fullRoster', 'npcs', and 'titles' lists provided. If"
-            + " a title's champion is not specified or is empty, you must state that it is vacant"
-            + " and not invent a champion. Do not invent new names or assume the existence of"
-            + " characters not listed.\n"
-            + "3.  **Empty Wrestler List:** If the 'wrestlers' list is empty, it signifies that no"
-            + " wrestlers are physically present. The segment should only feature the characters"
-            + " from the 'npcs' list.\n"
-            + "4.  **No New Characters:** Do not invent or introduce any characters not listed in"
-            + " the provided context. This is a strict rule.\n"
-            + "5.  **Title Matches:** If the segment is a title match, the narration should"
-            + " prominently feature the championship at stake. Emphasize the prestige of the"
-            + " title, the champion's reign, and the challenger's quest to win it. The narration"
-            + " should build drama around the championship, making it the central focus of the"
-            + " segment.");
+        """
+        You will be provided with a context object in JSON format.
+        The fields in this JSON object are described below.
+        Please adhere to the following rules when generating the narration:
+
+        1.  **Participants & Roles:** The characters physically present and acting in this\
+         segment are exclusively those in the 'wrestlers' and 'npcs' lists. Wrestlers from\
+         the 'fullRoster' who are not in the 'wrestlers' list are not present and cannot act\
+         or speak, but they can be mentioned or referenced (e.g., in an announcement for a\
+         future match).
+        2.  **Data Integrity:** All characters, champions, and contenders mentioned in the\
+         narration MUST come from the 'fullRoster', 'npcs', and 'titles' lists provided. If\
+         a title's champion is not specified or is empty, you must state that it is vacant\
+         and not invent a champion. Do not invent new names or assume the existence of\
+         characters not listed.
+        3.  **Empty Wrestler List:** If the 'wrestlers' list is empty, it signifies that no\
+         wrestlers are physically present. The segment should only feature the characters\
+         from the 'npcs' list.
+        4.  **No New Characters:** Do not invent or introduce any characters not listed in\
+         the provided context. This is a strict rule.
+        5.  **Title Matches:** If the segment is a title match, the narration should\
+         prominently feature the championship at stake. Emphasize the prestige of the\
+         title, the champion's reign, and the challenger's quest to win it. The narration\
+         should build drama around the championship, making it the central focus of the\
+         segment.\
+        """);
 
     StringBuilder outcomeBuilder = new StringBuilder();
 
@@ -506,8 +509,7 @@ public class NarrationDialog extends Dialog {
         for (RivalryDTO rivalry :
             rivalryService.getActiveRivalriesForWrestlerAsDTO(wrestler.getId())) {
           WrestlerDTO opponent = rivalry.getOpponent(wrestler);
-          feuds.add(
-              String.format("Feuding with %s (Heat: %d)", opponent.getName(), rivalry.getHeat()));
+          feuds.add("Feuding with %s (Heat: %d)".formatted(opponent.getName(), rivalry.getHeat()));
         }
         wc.setFeudsAndHeat(feuds);
 
@@ -519,12 +521,12 @@ public class NarrationDialog extends Dialog {
                   Wrestler partner =
                       rel.getPartner(wrestlerService.findById(wrestler.getId()).get());
                   relationships.add(
-                      String.format(
-                          "%s with %s (Level: %d%s)",
-                          rel.getType().getDisplayName(),
-                          partner.getName(),
-                          rel.getLevel(),
-                          rel.getIsStoryline() ? ", Storyline" : ""));
+                      "%s with %s (Level: %d%s)"
+                          .formatted(
+                              rel.getType().getDisplayName(),
+                              partner.getName(),
+                              rel.getLevel(),
+                              rel.getIsStoryline() ? ", Storyline" : ""));
                 });
         wc.setRelationships(relationships);
 
@@ -584,7 +586,7 @@ public class NarrationDialog extends Dialog {
   }
 
   private SegmentNarrationService.SegmentNarrationContext buildPreviousSegmentContext(
-      @NonNull Segment segment) {
+      @NonNull final Segment segment) {
     // Fetch full segment details to avoid LazyInitializationException
     Segment loadedSegment = segmentService.findByIdWithDetails(segment.getId()).orElse(segment);
 
@@ -619,8 +621,7 @@ public class NarrationDialog extends Dialog {
       for (RivalryDTO rivalry :
           rivalryService.getActiveRivalriesForWrestlerAsDTO(wrestler.getId())) {
         WrestlerDTO opponent = rivalry.getOpponent(wrestler);
-        feuds.add(
-            String.format("Feuding with %s (Heat: %d)", opponent.getName(), rivalry.getHeat()));
+        feuds.add("Feuding with %s (Heat: %d)".formatted(opponent.getName(), rivalry.getHeat()));
       }
       wc.setFeudsAndHeat(feuds);
       wrestlerContexts.add(wc);
@@ -638,18 +639,18 @@ public class NarrationDialog extends Dialog {
     return context;
   }
 
-  private void showProgress(boolean show) {
+  private void showProgress(final boolean show) {
     progressBar.setVisible(show);
     generateButton.setEnabled(!show);
     saveButton.setEnabled(!show);
     regenerateButton.setEnabled(!show);
   }
 
-  private void showError(@NonNull String message) {
+  private void showError(@NonNull final String message) {
     notificationService.showError(message);
   }
 
-  private void showRetryDialog(@NonNull JsonNode errorResponse) {
+  private void showRetryDialog(@NonNull final JsonNode errorResponse) {
     Dialog dialog = new Dialog();
     dialog.setHeaderTitle("Narration Failed");
 
@@ -666,7 +667,7 @@ public class NarrationDialog extends Dialog {
         double estimatedCost = providerNode.path("estimatedCost").asDouble();
         Button retryButton =
             new Button(
-                "Retry with " + provider + String.format(" (~$%.4f)", estimatedCost),
+                "Retry with " + provider + " (~$%.4f)".formatted(estimatedCost),
                 e -> {
                   retryWithProvider(provider);
                   dialog.close();
@@ -680,7 +681,7 @@ public class NarrationDialog extends Dialog {
     dialog.open();
   }
 
-  private void retryWithProvider(@NonNull String provider) {
+  private void retryWithProvider(@NonNull final String provider) {
     showProgress(true);
 
     try {
@@ -752,7 +753,7 @@ public class NarrationDialog extends Dialog {
     }
   }
 
-  private void handleNarrationResponse(String response) {
+  private void handleNarrationResponse(final String response) {
     if (response == null || response.isEmpty()) {
       showError("Received an empty response from the AI service.");
       return;
